[gd_scene load_steps=11 format=3 uid="uid://5mgkvudu6ww8"]

[ext_resource type="Script" path="res://scenes/ui/main_menu/popup.gd" id="1_br5ca"]
[ext_resource type="StyleBox" uid="uid://1spqcg31jdx2" path="res://tress/misc/sbf_ui_dark_mask.tres" id="2_4nmj4"]
[ext_resource type="StyleBox" uid="uid://dibwpul5ku25j" path="res://tress/misc/sbe_default.tres" id="3_2lkh6"]

[sub_resource type="LabelSettings" id="LabelSettings_tjr8i"]
font_size = 30

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wy12g"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_13qrk"]

[sub_resource type="Animation" id="Animation_hy2fj"]
resource_name = "Cancel"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RootPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(326, 0), Vector2(326, -300)]
}

[sub_resource type="Animation" id="Animation_csfk4"]
resource_name = "Enter"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RootPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(326, -300), Vector2(326, 0)]
}

[sub_resource type="Animation" id="Animation_hcojl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RootPanel:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(326, -300)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m452b"]
_data = {
"Cancel": SubResource("Animation_hy2fj"),
"Enter": SubResource("Animation_csfk4"),
"RESET": SubResource("Animation_hcojl")
}

[node name="Popup" type="CanvasLayer"]
layer = 4
script = ExtResource("1_br5ca")
metadata/_edit_group_ = true

[node name="Background" type="Button" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = ExtResource("2_4nmj4")
theme_override_styles/hover = ExtResource("2_4nmj4")
theme_override_styles/pressed = ExtResource("2_4nmj4")
theme_override_styles/disabled = ExtResource("2_4nmj4")
theme_override_styles/focus = ExtResource("3_2lkh6")

[node name="RootPanel" type="ColorRect" parent="."]
custom_minimum_size = Vector2(500, 300)
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 326.0
offset_top = -300.0
offset_right = 826.0
grow_horizontal = 2
color = Color(0.223529, 0.243137, 0.27451, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="RootPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MessageText" type="Label" parent="RootPanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6
text = "Message"
label_settings = SubResource("LabelSettings_tjr8i")

[node name="HBoxContainer" type="HBoxContainer" parent="RootPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="RootPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_wy12g")
text = "Yes"

[node name="CancelButton" type="Button" parent="RootPanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_13qrk")
text = "No"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m452b")
}

[node name="SoundPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="button_down" from="Background" to="." method="_on_background_button_down"]
[connection signal="button_down" from="RootPanel/VBoxContainer/HBoxContainer/ConfirmButton" to="." method="_on_confirm_button_button_down"]
[connection signal="mouse_entered" from="RootPanel/VBoxContainer/HBoxContainer/ConfirmButton" to="." method="_play_button_hover_sound"]
[connection signal="button_down" from="RootPanel/VBoxContainer/HBoxContainer/CancelButton" to="." method="_on_cancel_button_button_down"]
[connection signal="mouse_entered" from="RootPanel/VBoxContainer/HBoxContainer/CancelButton" to="." method="_play_button_hover_sound"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
